[gd_scene load_steps=2 format=3 uid="uid://hk6brtxj8347"]

[ext_resource type="Script" path="res://player_ship/health.gd" id="1_aotq3"]

[node name="Health" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_aotq3")

[node name="BlankHeart" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -976.0
offset_top = -1016.0
offset_right = -586.0
offset_bottom = -626.0
grow_horizontal = 0
grow_vertical = 0
expand_mode = 1

[node name="health1" type="TextureRect" parent="BlankHeart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -197.0
offset_right = 197.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="health2" type="TextureRect" parent="BlankHeart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -184.0
offset_right = 184.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="health3" type="TextureRect" parent="BlankHeart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -195.0
offset_right = 195.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
